disable GC logs